# Dropzone

./: .gitignore  CMakeLists.txt  README.md  error.cpp  memory.cpp  memory.h  operating-system.cpp  testing.cpp
allocators/: any-pool-allocator.cpp  linked-pool-allocator.cpp  pool-allocator.cpp
macos/: memory.cpp
windows/: memory.cpp
